--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
 body {
-    color: white;
+    color: rgb(255, 248, 0);
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(255, 248, 0);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(255, 248, 0);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(0, 0, 0);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -32,10 +33,6 @@ p {
     font-size: 20px;
 }
 
-img {
-    height: 200px;
-}
-
 .categoria-videos {
     display: flex;
     overflow-x: auto;
@@ -45,11 +42,19 @@ img {
 .categoria {
     padding-left: 20px;
     padding-right: 20px;
-}
-h1 {
-    font-size: 40px;
+    margin-top: 50px;
 }
 
-p {
-    font-size: 20px;
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: rgb(255, 248, 0);
 }
